<resources>
    <string name="app_name">PAVmeals</string>N
    <string name="ingredient">Filter by Ingredient</string>
    <string name="category">Category</string>
    <string name="area">Filter by Area</string>
    <string name="greetings_here">Greetings here</string>
    <string name="result">Results Here</string>
    <string name="meal_of_the_day">Meal of The Day</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ingredients">Ingredients</string>
    <string name="cooking_instruction">Cooking Instruction</string>
    <string name="e_mail">E-mail</string>
    <string name="welcome_login">Good day! Please log in.</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="suphere">Didn\'t have any account? <i><u>Sign up here</u></i>.</string>
    <string name="lin">Already have an account? <i><u>Log in here</u></i>.</string>
    <string name="welcome_sup">Welcome to PAV Meals!</string>
    <string name="sign_up">Sign Up</string>
    <string name="fullname">Fullname</string>
    <string name="username">Username</string>
    <string name="log_out">Log Out</string>
    Spannable
    -->

</resources>