<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".android.LoginActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/tpg_h3"
        android:textAlignment="center"
        android:layout_marginTop="80dp"
        android:text="@string/welcome_login"/>
    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/intent"
        android:textAlignment="center"
        android:layout_below="@id/tv_title"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="50dp"
        android:text="@string/suphere"/>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/tpg_h5"
        android:layout_below="@id/tv_signup"
        android:layout_marginHorizontal="50dp"
        android:text="@string/username"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:paddingTop="10dp"
        android:layout_marginVertical="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tv_email"
        android:hint="mail@email.com" />
    <TextView
        android:id="@+id/tv_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/tpg_h5"
        android:layout_below="@id/et_email"
        android:layout_marginHorizontal="50dp"
        android:text="@string/password"/>
    <EditText
        android:id="@+id/et_pwd"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_pwd"
        android:inputType="textPassword"
        android:paddingTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="10dp"
        android:hint="Password"/>

    <Button
        android:id="@+id/bt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_pwd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/log_in"
        android:elevation="5dp"
        android:background="@drawable/search"/>


</RelativeLayout>