<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".android.MainActivity"
    android:layout_marginHorizontal="10dp">

    <RelativeLayout
        android:id="@+id/rl_mealpick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp" >

        <ImageView
            android:id="@+id/iv_pickThumb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:paddingTop="120dp" />

        <TextView
            android:id="@+id/tv_greetings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            style="@style/tpg_h1"
            android:text="Morning, Priscilla"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/tpg_h4"
        android:text="@string/category"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_category"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="5dp"
        tools:listitem="@layout/item_row_category"/>

    <TextView
        android:id="@+id/tv_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/tpg_h4"
        android:text="@string/area"
        />
        <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_area"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="5dp"
        tools:listitem="@layout/item_row_area"/>

    <TextView
        android:id="@+id/tv_ingredient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/tpg_h4"
        android:text="@string/ingredient"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_ingredient"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="5dp"
        tools:listitem="@layout/item_row_ingredient"/>
</LinearLayout>